--- a/commands.html
+++ b/commands.html
@@ -17,6 +17,20 @@
   <main>
     <section>
       <h2>Explore UNIX Commands</h2>
+       <!-- Search Input -->
+    <div class="search-container">
+      <input
+        type="text"
+        id="search-input"
+        placeholder="Search for a command..."
+      />
+      <button id="search-btn">Search</button>
+    </div>
+
+    <!-- Command List -->
+    <ul id="command-list">
+      <!-- Commands will be dynamically inserted here -->
+    </ul>
       <ul id="command-list">
         <!-- Commands will be dynamically inserted here -->
       </ul>
